<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_home"
    android:layout_width="match_parent"
    android:paddingBottom="36dp"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".home.HomeActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:contentDescription="@string/content_description_smash_logo"
        android:src="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="280dp"
        android:layout_marginBottom="24dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorButtonBackground"
        android:text="@string/search_fighters"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/button_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_list"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorButtonBackground"
        android:text="@string/view_favorites"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>