<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">

    <TextView
        android:id="@+id/tv_favorites_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/favorites_title"
        android:textColor="@color/black"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_label_container"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_favorites_title">

        <TextView
            android:id="@+id/tv_placeholder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:text="@string/fighter_label"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@id/tv_placeholder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/series_label"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@id/tv_name_label"
            app:layout_constraintStart_toEndOf="@id/tv_name_label"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_no_favorites_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="italic"
        android:text="@string/no_favorites_selected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_label_container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_fighters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_favorites_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
