<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation">

    <EditText
        android:id="@+id/et_query"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="fighterName,fighterSeries"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/search_fighter"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_query">
        <TextView
            android:id="@+id/tv_placeholder"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fighter_label"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@id/tv_placeholder"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/series_label"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@id/tv_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_name_label"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_fighters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/et_query" />

</androidx.constraintlayout.widget.ConstraintLayout>